2012-01-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc, dwim_op): Eliminated redundant re-evaluation
	of range arguments. They are already evaluated since the cons
	expression is evaluates as part of the dwim arglist.
	Replaced some open code with function calls to the new listref
	and listref_l functions.
	(tostring, tostringp): made extern and moved to lib.c.

	* lib.c (listref, listref_l): New functions.
	(tostring, tostringp): moved here from eval.c.

	* lib.h (listref, listref_l, tostring, tostringp): Declared.

	* match.c (format_field): Handle index and range references.

	* txr.1: Documented new output variable syntax.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc): Handles full responsibility for assigning
	to list and array ranges.
	(op_modplace): Pass extra arguments to dwim_loc so it can
	do the job for ranges. If dwim_loc returns 0, it means
	that it did everything.
	(op_dwim): Support list and array ranges.

	* txr.1: Documented.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (zerop): Misspelling in error message.

	* lib.c (sub_list, replace_list, sub_vec, replace_vec):
	Allow the value t to specify one element past the end, so that t t
	refers to zero-length sequence just past the end of the array or list.
	Also, fixed out of bounds memmoves in replace_vec.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New functions registered.

	* lib.c (sub_list, replace_list, vectorp): New functions.
	(sub_vec): Allow negative indices from end of array.
	(replace_vec): New function.

	* lib.h (sub_list, replace_list, vectorp, replace_vec): Declared.

	* parser.l (DOTDOT): Scan .. as new token.

	* parser.y (DOTDOT): New token.
	(expr): New syntax with DOTDOT.
	(yybadtoken): Handle DOTDOT.

	* txr.vim: Added new functions. Also missing append* and dwim.

	* txr.1: Updated.

2012-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim (txr_chr): Fix for highlighting named characters
	like #\newline.
