@@ -1,5 +1,15 @@
 2012-01-26  Kaz Kylheku  <kaz@kylheku.com>
 
+	* match.c (format_field): Removed useless use of cat_str (no longer
+	needed because str is already a string). The purpose was to reduce
+	character to strings.
+	(subst_vars): Some of the new logic in format_field must be replicated
+	in the case when format_field is not called because the variable
+	has no modifiers. Lists must be converted to a space-separated string.
+	Bugfix here: occurence of pat and modifiers is not mutually exclusive.
+
+2012-01-26  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (dwim_loc, dwim_op): Eliminated redundant re-evaluation
 	of range arguments. They are already evaluated since the cons
 	expression is evaluates as part of the dwim arglist.
